Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -117,10 +117,7 @@ input, textarea {
             }
         }
         ul {
-            display: table;
-            float: none;
             margin: 0 auto;
-            text-align: center;
             padding: 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
